--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 /tmp
 /out-tsc
-
+/dist
+/.idea
+.idea/*
 /node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /.pnp
 .pnp.js
+.env
 
 .vscode/*
