--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "emitDecoratorMetadata": true,
     "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src", "src/middleware/authMiddleware.ts"]
 }
